# CalculadoraMedia

./: .gitignore  AdrianaTeste  AdrianaTeste.ipynb  CalculadoraMedia.ipynb  Data.xlsx  README.md  controller.py  file_dialog_helper.py  helper.py  main.py  pyproject.toml  requirements.txt  rodar-em-outro-dispositivo.txt  view.py  view_flet.py
