[project]
name = "calculadora-media"
version = "0.1.0"
description = "Calculadora de Média - CSV/XLSX"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "flet>=0.21.0",
]

[tool.flet.macos]
# Necessário para o FilePicker no macOS (acesso a arquivos selecionados).
# Usado ao fazer build: flet build macos
# Se com "flet run" o seletor não abrir, tente: pip install flet==0.28.2
entitlement."com.apple.security.files.user-selected.read-write" = true
